[tool.poetry]
name = "xiaodou"
version = "0.1.0"
description = ""
authors = ["Volltin <volltin@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.0"
pygame = "^2.5.2"
python-dotenv = "^1.0.0"
azure-cognitiveservices-speech = "^1.32.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
